README を分かりやすくするための編集